<resources>
    <string name="app_name">香港充電寶</string>
    <string name="current_status">當前狀態</string>
    <string name="use_long">使用時長</string>
    <string name="cost">費用</string>
    <string name="order_no">訂單號</string>
    <string name="cabinet_id">充電寶ID</string>
    <string name="use_addrs">使用地点</string>
    <string name="mine_data">個人資料</string>
    <string name="language">語言</string>
    <string name="check_update">檢查更新</string>
    <string name="logout">退出登錄</string>
    <string name="pay_order">支付訂單</string>
    <string name="breakage">報損</string>
    <string name="repor_lost">報失</string>
    <string name="confirm">確定</string>
    <string name="please_new_phone_num">請輸入新的手機號碼</string>
    <string name="please_input_verification_code">請輸入驗證碼</string>
    <string name="get_ver_code">獲取驗證碼</string>
    <string name="contact_us">聯絡我們</string>
    <string name="company_introduction">公司介紹</string>
    <string name="user_name">用戶名稱</string>
    <string name="time">時間</string>
    <string name="credits">積分</string>
    <string name="topup">充值</string>
    <string name="account_balance">賬戶結餘 (漢按金)</string>
    <string name="credit_card">信用卡</string>
    <string name="default_pay">付款設定</string>
    <string name="detail">明細</string>
    <string name="my_coupon">我的優惠券</string>
    <string name="date">日期</string>
    <string name="duration">時長</string>
    <string name="charge">費用</string>
    <string name="status">狀態</string>
    <string name="operation">操作</string>
    <string name="wallet">錢包</string>
    <string name="use_record">使用記錄</string>
    <string name="msg">消息</string>
    <string name="mine_info">個人信息</string>
    <string name="user_id">用戶ID</string>
    <string name="name">姓名</string>
    <string name="phone_num">手機號碼</string>
    <string name="email_addrs">郵箱地址</string>
    <string name="sex">性別</string>
    <string name="birthday">生日</string>
    <string name="in_city">所在城市</string>
    <string name="account_setting">賬號設定</string>
    <string name="check_updateing">檢查更新中....</string>
    <string name="cancel">取消</string>
    <string name="logout_tips">你確定要退出此賬號嗎?</string>
    <string name="edit_nickname">修改暱稱</string>
    <string name="change_phone_num">更換手機號碼</string>
    <string name="done">完成</string>
    <string name="save">保存</string>
    <string name="bank_card">信用卡</string>
    <string name="add">添加</string>
    <string name="default_pay_type_setting">付款設定</string>
    <string name="money">金額</string>
    <string name="coupon">優惠券</string>
    <string name="about_us">關於我們</string>
    <string name="customer_service">客戶服務</string>
    <string name="use_compass">使用指南</string>
    <string name="use_rule">使用條款</string>
    <string name="privacy_policy">隱私政策</string>
    <string name="hot_issue">熱門問題</string>
    <string name="feedback">意見反饋</string>
    <string name="setting_success">設置成功</string>
    <string name="borrow">借電</string>
    <string name="repay">還電</string>
    <string name="disagree_permission">拒絕相關權限,軟件無法正常使用!</string>
    <string name="twice_click_to_exit">再按一次退出~</string>
    <string name="input_top_up_count">輸入充值金額</string>
    <string name="top_up_rule">充值規則:</string>
    <string name="top_up_protocol">《充值協議》</string>
    <string name="pay">支付</string>
    <string name="all">全部</string>
    <string name="unused">未使用</string>
    <string name="out_of_date">已過期</string>
    <string name="use_coupon">優惠券抵扣</string>
    <string name="use_credits">積分抵扣</string>
    <string name="pay_alipay">支付寶支付</string>
    <string name="pay_we_char">微信支付</string>
    <string name="pay_bank_card">銀行卡支付</string>
    <string name="commit">提交</string>
    <string name="feedback_hint">有什麼要跟我們產品說的呢....</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="borrowing">借用中</string>
    <string name="forget_pwd">忘記密碼</string>
    <string name="please_input_pwd">請輸入密碼</string>
    <string name="please_input_new_pwd">請輸入新密碼</string>
    <string name="please_input_twice_pwd">請再次輸入密碼</string>
    <string name="login_in">登入</string>
    <string name="please_input_phone_num">請輸入手機號碼</string>
    <string name="register_new_account">註冊新賬戶</string>
    <string name="bank_card_num">信用卡號</string>
    <string name="validity">有效期</string>
    <string name="ver_code">驗證碼</string>
    <string name="phone_is_disabled">手機號碼不可用</string>
    <string name="ver_code_send_success">驗證碼發送成功</string>
    <string name="ver_code_send_error">驗證碼發送失敗</string>
    <string name="login_success">登錄成功</string>
    <string name="ver_code_is_empty">請輸入驗證碼</string>
    <string name="load_error">加載失敗</string>
    <string name="loading">加載中...</string>
    <string name="load_wallet_error">獲取錢包餘額失敗</string>
    <string name="upload_image_file_error">上傳圖片文件失敗</string>
    <string name="commit_failed">提交失敗</string>
    <string name="upload_image_file_success">上傳圖片文件成功</string>
    <string name="commit_success">提交成功,感謝您的反饋</string>
    <string name="please_authorization">請允許申請的權限</string>
    <string name="content_not_be_null">內容不能為空</string>
    <string name="last_name_or_first_name_not_be_null">名字或姓氏不能為空</string>
    <string name="select_area_code">區號選擇</string>
    <string name="the_required_field_cannot_be_empty">必填字段不能為空</string>
    <string name="register_success">註冊成功</string>
    <string name="no_data">沒有數據哦</string>
    <string name="retry">重試</string>
    <string name="please_agree_relevant_protocol">請同意相關協議</string>
    <string name="add_failed">添加失敗</string>
    <string name="mod_failed">修改失敗</string>
    <string name="mod_success">修改成功</string>
    <string name="no_data_mod_location">附近沒有商家,換個位置試試吧</string>
    <string name="format_can_use">可用 %d</string>
    <string name="format_repayable">可還 %d</string>
    <string name="site_detail">網點詳情</string>
    <string name="site_list">網點列表</string>
    <string name="select_phone">聯繫號碼選擇</string>
    <string name="topup_count_not_be_null">充值金額不能為空</string>
    <string name="borrow_power_bank">借用充電寶</string>
    <string name="borrow_success">借用成功</string>
    <string name="format_position">進度: %s %%</string>
    <string name="borrow_failed">借用失敗</string>
    <string name="borrow_failed_hint">很抱歉,借用失敗</string>
    <string name="please_once_more_scan">請再次掃碼</string>
    <string name="please_wait">請等待</string>
    <string name="borrowing_power_bank">正在借用充電寶</string>
    <string name="rich_scan">掃一掃</string>
    <string name="work_time">營業時間</string>
    <string name="phone">電話</string>
    <string name="account_register">賬號註冊</string>
    <string name="sur_name">姓氏*</string>
    <string name="real_name">名字*</string>
    <string name="please_input_ver_code">請輸入驗證碼</string>
    <string name="please_input_email_not_required">請輸入郵箱 (非填)</string>
    <string name="please_invite_not_required">請輸入您的邀請碼 (必填)</string>
    <string name="already_have_account_to_login">已有賬號,去登入</string>
    <string name="registration_means_reading_and_agreeing">註冊即表示閱讀并同意</string>
    <string name="please_scan_or_code">請掃描二維碼</string>
    <string name="to_pay_order">去支付訂單</string>
    <string name="please_insert_the_charger_into_the_open_position">請將充電寶插入打開倉位中</string>
    <string name="please_select_language">請選擇語言</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="man">男</string>
    <string name="wo_man">女</string>
    <string name="hint">提示</string>
    <string name="bind_phone">手機綁定</string>
    <string name="expire">到期日</string>
    <string name="take_photo">拍照</string>
    <string name="how_can_it_not_be_used">描述下怎麼不能用......</string>
    <string name="breakage_power_bank">報損充電寶</string>
    <string name="contact_by_phone">聯絡電話</string>
    <string name="contact_by_email">電子郵箱</string>
    <string name="about_web_site">官方網站</string>
    <string name="contact_we_chat">微信公眾號</string>
    <string name="facebook_home">Facebook專頁</string>
    <string name="load_money_info_error">加載餘額信息失敗</string>
    <string name="return_power_bank">歸還充電寶</string>
    <string name="return_power_bank_failed">歸還失敗</string>
    <string name="twice_scan">在掃一次</string>
    <string name="not_ing_order">請先借用充電寶</string>
    <string name="have_ing_order">您當前有未結束的訂單</string>
    <string name="tracing_system">跟隨系統</string>
    <string name="simplified_chinese">簡體中文</string>
    <string name="top_up_success">充值成功</string>
    <string name="top_up_failed">充值失敗</string>
    <string name="no_more_data">沒有更多數據了</string>
    <string name="order_detail">訂單詳情</string>
    <string name="breakage_success">報損成功</string>
    <string name="check_order_ing">請等待...</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失敗</string>
    <string name="format_pay_btn">確認支付$%.2f元</string>
    <string name="format_pay_money">$ %.2f</string>
    <string name="scan_scan">掃一掃</string>
    <string name="pay_wallet">錢包支付</string>
    <string name="mod">修改</string>
    <string name="bank_name">銀行名字</string>
    <string name="card_holder_name">持卡人姓名</string>
    <string name="save_success">保存成功</string>
    <string name="card_holder_name_bank_name_no_not_be_null">持卡人姓名,銀行名,卡號不能為空</string>
    <string name="save_error">保存失敗</string>
    <string name="load_bank_detail_failed">加載銀行卡詳情失敗</string>
    <string name="edit">編輯</string>
    <string name="del">刪除</string>
    <string name="del_failed">刪除失敗</string>
    <string name="del_success">刪除成功</string>
    <string name="not_sufficient_funds">積分不足50時,是不能借的喔</string>
    <string name="not_do">不用了</string>
    <string name="to_top_up">去充值</string>
    <string name="whether_to_start_dialup_validation">是否開始撥號驗證</string>
    <string name="just_ver">立即驗證</string>
    <string name="call">呼叫</string>
    <string name="Identity_is_overdue">身份過期,請重新登錄</string>
    <string name="suspend_an_account">賬號被凍結,點擊確定切換賬號</string>
    <string name="operating_frequency">操作頻繁,請稍後再試</string>
    <string name="surname_or_realname_not_be_null">姓氏或名字不能為空</string>
    <string name="please_input_sur_name">請輸入姓氏</string>
    <string name="please_input_real_name">請輸入名字</string>
    <string name="forget_user_name">忘記用戶名</string>
    <string name="please_confirm_your_phone_num">請確認您的電話號碼</string>
    <string name="creditsOrCurrency">積分/貨幣</string>
    <string name="shop">商城</string>
    <string name="input_your_birthday">輸入您的生日</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="information">資料</string>
    <string name="phone_num_not_be_null">電話號碼不能為空</string>
    <string name="shopping_order">購物訂單</string>
    <string name="shopping_car">購物車</string>
    <string name="evaluation_of_the_order">想說點什麼寫在這裡吧</string>
    <string name="evaluation_of_the_order_success">評價成功</string>
    <string name="evaluation">評價</string>
    <string name="ascending_sort">升序</string>
    <string name="descending_sort">降序</string>
    <string name="setting_pwd_question">設置密保問題</string>
    <string name="and">和</string>
    <string name="pwd_question">密保問題</string>
    <string name="my_credits">我的積分</string>
    <string name="my_currency">虛擬貨幣</string>
    <string name="currency_record">貨幣記錄</string>
    <string name="credits_record">信用記錄</string>
    <string name="credits_and_currency">信用貨幣</string>
    <string name="format_consignee">收貨人: %s</string>
    <string name="format_shpuhuo_addrs">收貨地址:</string>
    <string name="select_distribution_time">選擇配送時間</string>
    <string name="credits_count">信用分</string>
    <string name="commodity_standard">商品规格: %s</string>
    <string name="format_commodity">共%s件商品 合計:</string>
    <string name="commit_order">提交訂單</string>
    <string name="commodity_des">商品簡介</string>
    <string name="Immediately_change">立即兌換</string>
    <string name="please_input_standard_input">請規範輸入</string>
    <string name="format_your_username">您的有戶名是: %s</string>
    <string name="save_and_use">保存并使用</string>
    <string name="detail_address">詳細地址</string>
    <string name="email_code">郵編</string>
    <string name="address">地址</string>
</resources>