<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100px"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">
            <View
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/useRecordHeadStyle"
                android:text="@string/date" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/useRecordHeadStyle"
                android:text="@string/duration" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/useRecordHeadStyle"
                android:visibility="gone"
                android:text="@string/charge" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/useRecordHeadStyle"
                android:text="@string/status" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/useRecordHeadStyle"
                android:text="@string/operation" />
            <View
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>