<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/tool_bar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26px"
        android:background="@drawable/bg_btn_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10px">

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/current_status"/>

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/use_long"/>

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/cost"/>


                <TextView
                    style="@style/itemTextView"
                    android:text="@string/order_no"/>

                <TextView
                    style="@style/itemTextView"
                    android:text="@string/cabinet_id"/>

                <TextView
                    style="@style/itemTextView"
                    android:paddingBottom="10px"
                    android:text="@string/use_addrs"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUseStatus"
                    style="@style/itemTextView"
                    tools:text="已归还"/>

                <TextView
                    android:id="@+id/tvUseTime"
                    style="@style/itemTextView"
                    tools:text="121小时"/>

                <TextView
                    android:id="@+id/tvMoney"
                    style="@style/itemTextView"
                    tools:text="3元"/>


                <TextView
                    android:id="@+id/tvNumber"
                    style="@style/itemTextView"
                    tools:text="213233"/>

                <TextView
                    android:id="@+id/tvId"
                    style="@style/itemTextView"
                    tools:text="3213214"/>

                <TextView
                    android:id="@+id/tvName"
                    style="@style/itemTextView"
                    tools:text="渣渣面食"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <Button
          android:id="@+id/mBtnToPay"
          android:layout_marginTop="60px"
          android:layout_width="match_parent"
          android:layout_height="80px"
          android:layout_marginLeft="26px"
          android:layout_marginRight="26px"
          android:background="@drawable/select_btn_yellow_oval"
          android:textColor="@android:color/black"
          android:textSize="15sp"
          android:visibility="gone"
          android:textStyle="bold"
          android:text="@string/pay_order"/>

      <LinearLayout
          android:layout_marginTop="300px"
          android:layout_width="match_parent"
          android:layout_height="80px"
          android:orientation="horizontal"
          android:gravity="center">
          <TextView
              android:id="@+id/mTvBreakage"
              android:layout_width="336px"
              android:layout_height="80px"
              android:textColor="@android:color/white"
              android:textSize="15sp"
              android:visibility="invisible"
              android:gravity="center"
              android:textStyle="bold"
              android:text="@string/breakage"
              android:background="@drawable/bg_btn_black_oval"/>
          <TextView
              android:id="@+id/mTvReportTheLoss"
              android:layout_marginLeft="26px"
              android:layout_width="336px"
              android:layout_height="80px"
              android:visibility="invisible"
              android:textColor="@android:color/black"
              android:textSize="15sp"
              android:gravity="center"
              android:textStyle="bold"
              android:text="@string/repor_lost"
              android:background="@drawable/bg_btn_black_stroke_oval"/>
      </LinearLayout>
  </LinearLayout>
</LinearLayout>