<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100px"
    android:background="@drawable/select_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/money"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/operation"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />
</com.zhy.autolayout.AutoLinearLayout>