<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <ImageView
           android:id="@+id/mIvBack"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="26px"
           android:layout_centerVertical="true"
           android:fitsSystemWindows="true"
           android:src="@drawable/ic_back"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:text="@string/forget_pwd"
           android:textColor="@android:color/white"
           android:textSize="24sp"/>
   </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_your_birthday"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="650px"
        android:layout_height="80px"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mEtMouth"
            style="@style/registerEditView"
            android:hint="@string/mouth"
            android:inputType="text"
            android:maxLines="1"/>

        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/mEdDay"
            style="@style/registerEditView"
            android:hint="@string/day"
            android:inputType="text"
            android:maxLines="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/mBtnConfirm"
        android:layout_width="650px"
        android:layout_gravity="center_horizontal"
        android:layout_height="80px"
        android:background="@drawable/select_btn_yellow"
        android:text="@string/confirm"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>
</LinearLayout>