<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <EditText
        android:id="@+id/mEtName"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_margin="26px"
        android:background="@drawable/bg_btn_white"
        android:hint="@string/card_holder_name"
        android:paddingLeft="26px"
        android:paddingRight="26px"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/mEtBankName"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:background="@drawable/bg_btn_white"
        android:hint="@string/bank_name"
        android:paddingLeft="26px"
        android:paddingRight="26px"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/mEtBankCardNo"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_margin="26px"
        android:background="@drawable/bg_btn_white"
        android:hint="@string/bank_card_num"
        android:paddingLeft="26px"
        android:paddingRight="26px"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/mEtBankCardValidity"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:background="@drawable/bg_btn_white"
        android:hint="@string/validity"
        android:paddingLeft="26px"
        android:paddingRight="26px"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/mBankCardVerCode"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:layout_marginTop="26px"
        android:background="@drawable/bg_btn_white"
        android:hint="@string/ver_code"
        android:paddingLeft="26px"
        android:paddingRight="26px"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26px"
        android:layout_marginLeft="52px"
        android:layout_marginTop="26px"
        android:text="國家 / 地區"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/mSpinnerAreaName"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:entries="@array/area_name"
        android:background="@drawable/bg_btn_white">

    </Spinner>
</LinearLayout>