<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />


    <ImageView
        android:id="@+id/mIvBorrowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76px"
        android:layout_marginTop="76px"
        android:src="@drawable/ic_result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrow_failed_hint"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/please_once_more_scan"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/mBtnToScan"
        android:layout_width="550px"
        android:layout_height="80px"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:layout_marginTop="90px"
        android:background="@drawable/select_btn_yellow_oval"
        android:text="@string/rich_scan"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

</LinearLayout>